--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,18 @@
         "Debug"
       ],
       "problemMatcher": "$msCompile"
+    },
+    {
+      "label": "build-dotnetdebug-tests",
+      "type": "process",
+      "command": "dotnet",
+      "args": [
+        "build",
+        "${workspaceFolder}/tests/DotnetDebug.Tests/DotnetDebug.Tests.csproj",
+        "-c",
+        "Debug"
+      ],
+      "problemMatcher": "$msCompile"
     }
   ]
 }
