--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -36,6 +36,18 @@
         "Debug"
       ],
       "problemMatcher": "$msCompile"
+    },
+    {
+      "label": "build-dotnetdebug-uitests-flaui",
+      "type": "process",
+      "command": "dotnet",
+      "args": [
+        "build",
+        "${workspaceFolder}/tests/DotnetDebug.UiTests.FlaUI/DotnetDebug.UiTests.FlaUI.csproj",
+        "-c",
+        "Debug"
+      ],
+      "problemMatcher": "$msCompile"
     }
   ]
 }
