Add UI Automation Test Kit for GCD Visualizer
- Updated launch configurations in launch.json for new UI automation tests.
- Added build tasks in tasks.json for UI automation test projects.
- Updated solution file to include new projects for UI automation testing.
- Enhanced MainWindow.axaml with automation properties for UI elements.
- Created FlaUI.EasyUse and FlaUI.EasyUse.TUnit projects for reusable UI automation utilities.
- Implemented UiAssert class for assertion helpers in UI tests.
- Developed DesktopAppSession and DesktopAppLaunchOptions for managing desktop application sessions.
- Created AutomationTestClient for launching and interacting with the GCD visualizer.
- Added MainWindowController for controlling the main window of the GCD visualizer.
- Implemented locators for UI elements in MainWindowLocators.
- Developed UI automation tests for valid and invalid input scenarios in MainWindowUiAutomationTestKitTests.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "C#: Dotnet Debug",
+            "name": "C#: Dotnet Console Debug",
             "type": "dotnet",
             "request": "launch",
             "projectPath": "${workspaceFolder}/src/DotnetDebug/DotnetDebug.csproj"
         },
         {
-            "name": "C#: Dotnet Debug (MCP CoreCLR)",
+            "name": "C#: Dotnet Console Debug (MCP CoreCLR)",
             "type": "coreclr",
             "request": "launch",
             "program": "${workspaceFolder}/src/DotnetDebug/bin/Debug/net10.0/DotnetDebug.dll",
@@ -25,7 +25,16 @@
             "preLaunchTask": "build-dotnetdebug"
         },
         {
-            "name": "C#: Dotnet Tests Debug (MCP CoreCLR)",
+            "name": "C#: Dotnet Avalonia Debug (MCP CoreCLR)",
+            "type": "coreclr",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/DotnetDebug.Avalonia/bin/Debug/net9.0/DotnetDebug.Avalonia.dll",
+            "cwd": "${workspaceFolder}/src/DotnetDebug.Avalonia",
+            "stopAtEntry": false,
+            "preLaunchTask": "build-dotnetdebug-avalonia"
+        },
+        {
+            "name": "C#: Dotnet Unit Tests Debug (MCP CoreCLR)",
             "type": "coreclr",
             "request": "launch",
             "program": "${workspaceFolder}/tests/DotnetDebug.Tests/bin/Debug/net10.0/DotnetDebug.Tests.exe",
@@ -38,22 +47,22 @@
             "preLaunchTask": "build-dotnetdebug-tests"
         },
         {
-            "name": "C#: Dotnet Debug Avalonia (MCP CoreCLR)",
-            "type": "coreclr",
-            "request": "launch",
-            "program": "${workspaceFolder}/src/DotnetDebug.Avalonia/bin/Debug/net9.0/DotnetDebug.Avalonia.dll",
-            "cwd": "${workspaceFolder}/src/DotnetDebug.Avalonia",
-            "stopAtEntry": false,
-            "preLaunchTask": "build-dotnetdebug-avalonia"
-        },
-        {
-            "name": "C#: Dotnet UI Tests Debug (MCP CoreCLR)",
+            "name": "C#: Dotnet UI Tests FlaUI Debug (MCP CoreCLR)",
             "type": "coreclr",
             "request": "launch",
             "program": "${workspaceFolder}/tests/DotnetDebug.UiTests.FlaUI/bin/Debug/net10.0-windows7.0/DotnetDebug.UiTests.FlaUI.exe",
             "cwd": "${workspaceFolder}/tests/DotnetDebug.UiTests.FlaUI",
             "stopAtEntry": false,
             "preLaunchTask": "build-dotnetdebug-uitests-flaui"
+        },
+        {
+            "name": "C#: Dotnet UI Tests UIAutomationTestKit Debug (MCP CoreCLR)",
+            "type": "coreclr",
+            "request": "launch",
+            "program": "${workspaceFolder}/tests/DotnetDebug.UiTests.UIAutomationTestKit/bin/Debug/net10.0-windows7.0/DotnetDebug.UiTests.UIAutomationTestKit.exe",
+            "cwd": "${workspaceFolder}/tests/DotnetDebug.UiTests.UIAutomationTestKit",
+            "stopAtEntry": false,
+            "preLaunchTask": "build-dotnetdebug-uitests-uiautomationtestkit"
         }
     ]
 }
