--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -61,6 +61,10 @@
             "request": "launch",
             "program": "${workspaceFolder}/tests/DotnetDebug.UiTests.UIAutomationTestKit/bin/Debug/net10.0-windows7.0/DotnetDebug.UiTests.UIAutomationTestKit.exe",
             "cwd": "${workspaceFolder}/tests/DotnetDebug.UiTests.UIAutomationTestKit",
+            "args": [
+                "--filter-uid",
+                "DotnetDebug.UiTests.UIAutomationTestKit.Tests.UIAutomationTests.MainWindowUiAutomationTestKitTests.1.1.Calculate_ValidInput_ShowsResultAndSteps.1.1.0"
+            ],
             "stopAtEntry": false,
             "preLaunchTask": "build-dotnetdebug-uitests-uiautomationtestkit"
         }
